testing fix to image stretch on mobile

--- a/style.css
+++ b/style.css
@@ -594,7 +594,7 @@ body.modal-open-mobile{
 
 @media only screen and (max-width: 360px){
   .project-modal-image{
-    height: 150px;
+    height: 100%;
   }
 }
 
